# cute-pomodoro-cli

./: .gitignore  README.md  pyproject.toml
pomodoro_timer/: ascii_numbers.py  config.py  main.py  progress_bar.py  sound_manager.py  statistics.py  statistics_ui.py  storage.py  theme_manager.py  timer.py  timer_state.py
pomodoro_timer/assets/: config.txt  logo.txt
pomodoro_timer/assets/cats/: work.txt
pomodoro_timer/assets/default/: long_break.txt  short_break.txt  work.txt
pomodoro_timer/assets/dogs/: long_break.txt  short_break.txt
pomodoro_timer/images/cats/: long_break.txt  short_break.txt
pomodoro_timer/images/dogs/: work.txt
